--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
@@ -76,5 +76,6 @@ mixin AnnouncementTooltip()
                         announcementId = self.getId(),
                         maxScore = self.getMaxScore(),
                         ableDropStudentScore = self.isAbleDropStudentScore(),
-                        ableToExempt = self.isAbleToExempt()
+                        ableToExempt = self.isAbleToExempt(),
+                        gradable = self.isGradable()
                     )
