fixed Grading Grid

--- a/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummaryCell.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummaryCell.jade
@@ -1,1 +1,1 @@
-+TeacherClassGradingGridSummaryCell(self.getModel(), self.getMaxScore())
++TeacherClassGradingGridSummaryCell(self.getModel(), self.getMaxScore(), true)
