--- a/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummaryItem.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummaryItem.jade
@@ -1,4 +1,4 @@
-mixin TeacherClassGradingGridSummaryCell(info, maxScore)
+mixin TeacherClassGradingGridSummaryCell(info, maxScore, gradable)
     normalValue = info.getNormalValue()
     div(
         class= (parseInt(normalValue, 10) ? '' : 'letter ') + (info.isEmptyGrade() ? "empty-grade" : ""),
@@ -17,7 +17,8 @@ mixin TeacherClassGradingGridSummaryCell(info, maxScore)
         div(class=cls, data-tooltip=info.getTooltipText(maxScore, true)).alert-flag
         if info.getComment()
             .with-comment
-        .edit-cell
+        if gradable
+            .edit-cell
 
 .ann-types-container
     .dotted-container.name-container.with-horizontal-dots
@@ -46,14 +47,14 @@ mixin TeacherClassGradingGridSummaryCell(info, maxScore)
                 div(data-tooltip=announcement.getTitle(), data-tooltip-type="overflow").type-name=announcement.getTitle()
                 .time=announcement.getExpiresDate().format('M d')
                 .max-score.dotted-h=maxScore
-                -console.info(announcement.isGradable())
                 each info,i in announcement.getStudentAnnouncements().getItems()
                     div(
                         row-index=i
                         data-able-drop-student-score= announcement.isAbleDropStudentScore(),
                         data-able-exempt-student-score= announcement.isAbleExemptStudentScore(),
+                        data-gradable= announcement.isGradable(),
                         data-max-score= maxScore,
                         class='item-' + info.getAnnouncementId().valueOf() + '-' + info.getStudentId() + (announcement.isGradable() ? ' gradable' : '')
                     ).dotted-h.grade-value
-                        +TeacherClassGradingGridSummaryCell(info, maxScore)
+                        +TeacherClassGradingGridSummaryCell(info, maxScore, announcement.isGradable())
                 div(class='avg-' + announcement.getId().valueOf()).dotted-h.grade-value=announcement.getAvg()
