seating chart refactoring

--- a/Chalkable.Web/assets/jade/activities/attendance/ClassAttendanceWithSeatPlace.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/ClassAttendanceWithSeatPlace.jade
@@ -1,15 +1,19 @@
 if self.getStudent()
-    .remove-red-btn.remove-student
-    student = self.getStudent()
-    A(
-        data-id=student.getId().valueOf(),
-    ).image-container.white.shadow
-        if self.getModel().getType() == chlk.models.attendance.AttendanceTypeEnum.ABSENT.valueOf()
+    div(class=self.getModel().getTypeName().toLowerCase()).not-empty
+        .remove-red-btn.remove-student
+        student = self.getStudent()
+        A(
+            data-id=student.getId().valueOf(),
+            data-type=self.getType(),
+            data-reason-id=self.getAttendanceReasonId() ? self.getAttendanceReasonId().valueOf() : null,
+            data-reason-text=self.getAttendanceReason() ? self.getAttendanceReason().getName() : null
+        ).image-container.white.shadow.attendance-data
             .reason-container
-                .reason-text=self.getAttendanceReason().getName()
-        +PersonImg(student, 70)
-    div(data-tooltip=student.getDisplayName(), data-tooltip-type="overflow").student-seating-name=student.getDisplayName()
-    div(class=self.getModel().getTypeName().toLowerCase()).student-seating-type
+                .reason-text=self.getAttendanceReason() ? self.getAttendanceReason().getName() : ''
+            +PersonImg(student, 70)
+        div(data-tooltip=student.getDisplayName(), data-tooltip-type="overflow").student-seating-name=student.getDisplayName()
+        .student-seating-type
+        .chlk-pop-up-container.popup-top.seating-attendance-popup
 else
     .empty
 
