--- a/Chalkable.Web/assets/jade/activities/attendance/SeatingChartPeople.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/SeatingChartPeople.jade
@@ -6,5 +6,6 @@
                 +RenderWith(item, chlk.templates.attendance.ClassAttendanceWithSeatPlaceTpl)(
                     smallPicture = true
                 )
+        BUTTON(type="submit")#submit-chart.chlk-button.blue-gradient-btn=Msg.Save.toUpperCase()
 
 
