--- a/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
@@ -39,7 +39,8 @@ mixin SummaryInfo(presentCount, allStudentsCount)
             +ActionForm('attendance', 'setClassAttendanceList').set-attendance-list-form
                 input(name="attendancesJson", type="hidden")
                 +Hidden('date', self.getDate().toStandardFormat())
-                +Hidden('classid', selectedId && selectedId.valueOf())
+                +Hidden('classList', true)
+                +Hidden('classId', selectedId && selectedId.valueOf())
                 items = self.getItems()
                 .top.panel-bg
                     +SummaryInfo(self.getPresentStudents().length, items.length)
