finished Seating Chart

--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -375,6 +375,10 @@ TEXTAREA.animated-textarea{
     #pop-up-triangle, .pop-up-triangle{
       bottom: -10px;
       @include transform(rotate(180deg));
+
+      &.big{
+        bottom: -14px;
+      }
     }
   }
 
