--- a/Chalkable.Web/assets/jade/activities/attendance/SeatingChartPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/SeatingChartPage.jade
@@ -45,7 +45,7 @@ selectedId = topData.getSelectedItemId()
         +UpdateGridForm(Msg.Edit_grid, self.getRows(), self.getColumns(), self.getMinData().rows, self.getMinData().columns, selectedId.valueOf())
         .grey-button.add-remove-students=Msg.Add_remove_students
         .right.right-container.save-attendances-buttons
-            if self.isAblePost()
+            if self.getModel().canPost()
                 BUTTON(href="javascript:", name="submitType", value="submit", type="submit", id="submit-attendance-button").chlk-button.action-button.message-button.blue-gradient-btn POST IT
                 +ActionLink('attendance', 'markAll', selectedId.valueOf(), self.getDate().toStandardFormat(), false, true)#all-present-link=Msg.Mark_all_Present
         .black-arrow.add=Msg.Add_your_students
@@ -70,6 +70,34 @@ selectedId = topData.getSelectedItemId()
                                 +RenderWith(info || new chlk.models.attendance.ClassAttendance, chlk.templates.attendance.ClassAttendanceWithSeatPlaceTpl)
                             if info
                                 .empty-box.student-block.absolute
-.chlk-pop-up-container.popup-top.seating-chart-popup.start
+typesEnum = chlk.models.attendance.AttendanceTypeEnum
+.chlk-pop-up-container.popup-top.seating-chart-popup
+    .pop-up-triangle.big
     .first-part
-    .second-part
+        div(data-type=typesEnum.PRESENT.valueOf()).item.present.selected
+            .student-seating-type
+            span.text=Msg.Present
+        div(data-type=typesEnum.LATE.valueOf()).item.late
+            .student-seating-type
+            span.text=Msg.Late
+            span.reason-text
+        div(data-type=typesEnum.ABSENT.valueOf()).item.absent
+            .student-seating-type
+            span.text=Msg.Absent
+            span.reason-text
+    .late-part
+        div(data-type=typesEnum.LATE.valueOf()).item.late.reason-item
+            .student-seating-type
+            span.text=Msg.No_reason
+        each item in self.getLateReasons()
+            div(data-id=item.getId().valueOf(), data-type=typesEnum.LATE.valueOf()).item.late.reason-item
+                .student-seating-type
+                span.text=item.getName()
+    .absent-part
+        div(data-type=typesEnum.ABSENT.valueOf()).item.absent.reason-item
+            .student-seating-type
+            span.text=Msg.No_reason
+        each item in self.getAbsentReasons()
+            div(data-id=item.getId().valueOf(), data-type=typesEnum.ABSENT.valueOf()).item.absent.reason-item
+                .student-seating-type
+                span.text=item.getName()
