--- a/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingSummary.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingSummary.jade
@@ -2,20 +2,16 @@
     topData = self.getTopData()
     topItems = topData.getTopItems()
     selectedId = topData.getSelectedItemId()
-    action = self.getAction() || "summary"
-    gridAction = self.getGridAction() || "summaryGrid"
-    +LeftRightToolbar(topItems, chlk.templates.classes.TopBar, 'grading', action)(
+    +LeftRightToolbar(topItems, chlk.templates.classes.TopBar, 'grading', 'summary')(
         selectedItemId=selectedId
     ).classes-bar
     .action-bar.not-transparent.buttons
         .container.panel-bg
             .left.no-border
                 .small-grey-buttons-block
-                    +ActionLink('grading', action, selectedId)(data-tooltip=Msg.Box(true)).no-action-link-styles.small-grey-button.boxes.pressed
-                    +ActionLink('grading', gridAction, selectedId)(data-tooltip=Msg.Grid).no-action-link-styles.small-grey-button.grid
+                    +ActionLink('grading', 'summary', selectedId)(data-tooltip=Msg.Box(true)).no-action-link-styles.small-grey-button.boxes.pressed
+                    +ActionLink('grading', 'summaryGrid', selectedId)(data-tooltip=Msg.Grid).no-action-link-styles.small-grey-button.grid
             .center
-                +ActionLink('grading', "summary", selectedId)(class = (action == "summary") ? "pressed" : "")=Msg.Item(true)
-                +ActionLink('grading', "standards", selectedId)(class = (action == "summary") ? "" : "pressed")=Msg.Standard(true)
-    +RenderWith(self.getSummaryPart(), chlk.templates.grading.GradingClassSummaryPartTpl)(
-        gradingPeriodId = self.getGradingPeriodId()
-    )
+                +ActionLink('grading', "summary", selectedId).pressed=Msg.Item(true)
+                +ActionLink('grading', "standards", selectedId)=Msg.Standard(true)
+    p Not implemented yet
