fixed getGradingGrid on server side added StudentAverages and ClassroomOptions to GradingGrid in UI

--- a/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummaryItem.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummaryItem.jade
@@ -20,6 +20,16 @@ mixin TeacherClassGradingGridSummaryCell(info, maxScore, gradable)
         if gradable
             .edit-cell
 
+mixin StudentAverages(model)
+    each studentAvg in model.getStudentAverages()
+        .dotted-container.grade-container.with-horizontal-dots.avgs-container
+            .type-name=model.displayAvgName(studentAvg)
+            .time
+            .max-score.dotted-h
+            each average,i in studentAvg.getAverages()
+                div(row-index=i, class=(i == model.getRowIndex() ? 'active-row' : '')).dotted-h.grade-value=average.getNumericValue()
+            .dotted-h.grade-value=studentAvg.getTotalAverage()
+
 .ann-types-container
     .dotted-container.name-container.with-horizontal-dots
         .type-name=Msg.Student(true)
@@ -39,8 +49,9 @@ mixin TeacherClassGradingGridSummaryCell(info, maxScore, gradable)
         roundedDots = true,
         padding = 77
     ).grid-toolbar.i-b.big-arrows
-        .dotted-container.grade-container.with-horizontal-dots.avgs-container
-            +RenderWith(self.getModel(), chlk.templates.grading.ShortGradingClassSummaryGridAvgsTpl)
+        if self.isAbleDisplayStudentAverage()
+            //+RenderWith(self.getModel(), chlk.templates.grading.ShortGradingClassSummaryGridAvgsTpl)
+            +StudentAverages(self)
         each announcement in self.getGradingItems()
             maxScore = announcement.getMaxScore()
             div(data-max-score=announcement.getMaxScore()).dotted-container.grade-container.with-horizontal-dots
